--- a/CSS.css
+++ b/CSS.css
@@ -6,18 +6,15 @@
 }
 
 .text-about{
-    font-size: 50px;
-    margin-left: 275px;
+    font-size: clamp(32px, 2.5vw ,50px);
 }
 
 pre{
-    margin-left: 275px;
-    font-size: 18px;
-    padding-top: 20px;
+    font-size: clamp(12px, 2.5vw ,18px);
 }
 
 #bodytextonpic{
-    padding-bottom: 275px;
+    padding-top: 25rem;
     text-align: left;
 }
 
@@ -25,6 +22,7 @@ pre{
     width: 250px;
     height: 65px;
     font-size: 25px;
+    border: none;
 }
 
 h5{
@@ -32,4 +30,19 @@ h5{
 }
 p{
     font-size: 60px;
+}
+
+#cbbody {
+    background-color: transparent !important;
+    border: none;
+}
+
+.card{
+    border: none;
+}
+
+.card-body #textabout{
+    margin: auto;
+    padding: auto;
+    padding-top: 5px;
 }
