--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .card {
     text-align: center;
-
 }
 
 p{
@@ -63,8 +62,8 @@ pre{
     float: right;
 }
 
-#id {
+#icon {
     position: absolute;
-    height: 20%;
-    width: 20%;
+    height: 10%;
+    width: 10%;
 }
